Adding get ready and word to display current action to do

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,16 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-12">
-      <h1 class="text-center">Physio App</h1>
-
-      <button (click)="startPhysio()" class = "btn btn-info">Start Physio</button>
-      <button (click)="pausePhysio()" class = "btn btn-info">Pause</button>
-      <h2 *ngIf="started && !complete">{{displayText}}: {{timeLeft}}s</h2>
-      <h2 *ngIf="started && !complete">Stretches completed: {{numberOfExercisesCompleted}}</h2>
-      <h2 *ngIf="started">Total time elapsed: {{totalTimeElapsed}}s</h2>
-      <p *ngIf="complete">Physio session done for today!</p>
+    <div class="col-md-12 text-center">
+      <h1>Physio App</h1>
+        <li class="list-inline-item" (click)="startPhysio()"><a class="btn btn-info">Start Physio</a></li>
+        <li class="list-inline-item" (click)="pausePhysio()"><a class="btn btn-info">Pause</a></li>
+        <h3 *ngIf="started && !complete || onGetReady">{{displayText}}: {{timeLeft}}s</h3>
+        <h3 *ngIf="started && !complete">Stretches completed: {{numberOfExercisesCompleted}}</h3>
+        <h3 *ngIf="started">Total time elapsed: {{totalTimeElapsedString}}</h3>
+        <p *ngIf="complete">Physio session done for today!</p>
+        <h2 *ngIf="stretching && started && !complete" style="color: green">STRETCH</h2>
+        <h2 *ngIf="!stretching && started && !complete" style="color: red">REST</h2>
+        <h2 *ngIf="onGetReady" style="color: purple">GET READY</h2>
     </div>
   </div>
 </div>
